# property_management

./: .gitignore  README.md  pyproject.toml  setup.py
property_management/: hooks.py
property_management/api/: location.py  tasks.py
property_management/customization/: assets_maintenance.py
property_management/property_management/custom/: asset.json  asset_finance_book.json  tenancy.json
property_management/property_management/doctype/property_management_setting/: property_management_setting.js  property_management_setting.json  property_management_setting.py  test_property_management_setting.py
property_management/property_management/doctype/recurring_maintenance_type/: recurring_maintenance_type.js  recurring_maintenance_type.json  recurring_maintenance_type.py  test_recurring_maintenance_type.py
property_management/property_management/doctype/room_details/: room_details.json  room_details.py
property_management/property_management/doctype/room_type/: room_type.js  room_type.json  room_type.py  test_room_type.py
property_management/property_management/doctype/tenancy/: tenancy.json
property_management/property_management/workspace/property_management/: property_management.json
property_management/public/js/: asset.js  assets_maintenance.js
